2012-11-18  Steve Langasek  <steve.langasek@ubuntu.com>

	* init/tests/test_job_process.c: fix test which was accidentally
	  relying on a variable persisting after it's gone out of scope.
	* init/tests/test_job_process.c: don't test the blocked/ignored
	  signal list in a spawned job; this is not testing the upstart code
	  but the characteristics of the system, and the test is wrong
	  because it assumes the signal lists in /proc/self/status fit in an
	  unsigned long int - patently untrue on mips, where we have 128
	  signals for historical reasons.

2012-11-17  Steve Langasek  <steve.langasek@ubuntu.com>

	* init/Makefile.am: set TERM=xterm, so that tests which rely on
	  TERM being set in the environment don't give different results and
	  gratuitously fail.

2012-11-15  James Hunt  <james.hunt@ubuntu.com>

	* NEWS: Release 1.6
	* configure.ac: Bump version to 1.7
	* NEWS: Begin new release

2012-11-07  James Hunt  <james.hunt@ubuntu.com>

	* Added stateful re-exec support such that when Upstart is asked
	  to restart itself using 'telinit u', the new instance of PID 1
	  will retain knowledge of all system jobs and running instances.

2012-09-10  James Hunt  <james.hunt@ubuntu.com>

	* Merged lp:~jconti/upstart/fix_empty_chroot.

2012-05-23  James Hunt  <james.hunt@ubuntu.com>

	* init/main.c: Add in "bare" re-exec handling from Ubuntu
	  branch.
	* init/main.c: Unhide "restart" option.

2012-10-22  James Hunt  <james.hunt@ubuntu.com>

	* init/parse_job.c: stanza_kill(): Actually save parsed
	  value to avoid crash if kill signal given as a numeric
	  (LP: #1049820).
	* init/tests/test_parse_job.c: test_stanza_kill(): New test:
	  "with signal and single numeric argument".
	* init/Makefile.am: test_job_process must now be linked to the 'util'
	  library for pty helper functionality.
	* init/tests/test_job_process.c:
	  - Compiler appeasement.
	  - Conditionally run tests in a pty for build environments such as